cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_309.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:250: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:250:9: Write of unused value
248.   
249.           c2l(iv, xor0);
250.           c2l(iv, xor1);
               ^
251.           for (l -= 8; l >= 0; l -= 8) {
252.               c2l(in, tin0);
